fix: use variable for project module

--- a/templates/wesionary/project/pkg/middlewares/rate_limitter.tmpl
+++ b/templates/wesionary/project/pkg/middlewares/rate_limitter.tmpl
@@ -1,7 +1,7 @@
 package middlewares
 
 import (
-	"github.com/mukezhz/test/pkg/framework"
+	"{{.ProjectModuleName}}/pkg/framework"
 	"net/http"
 	"strconv"
 	"time"
