--- a/templates/wesionary/project/pkg/module.tmpl
+++ b/templates/wesionary/project/pkg/module.tmpl
@@ -1,10 +1,10 @@
 package pkg
 
 import (
-	"github.com/mukezhz/test/pkg/framework"
-	"github.com/mukezhz/test/pkg/infrastructure"
-	"github.com/mukezhz/test/pkg/middlewares"
-	"github.com/mukezhz/test/pkg/services"
+	"{{.ProjectModuleName}}/pkg/framework"
+	"{{.ProjectModuleName}}/pkg/infrastructure"
+	"{{.ProjectModuleName}}/pkg/middlewares"
+	"{{.ProjectModuleName}}/pkg/services"
 
 	"go.uber.org/fx"
 )
