--- a/templates/wesionary/project/pkg/infrastructure/router.tmpl
+++ b/templates/wesionary/project/pkg/infrastructure/router.tmpl
@@ -1,7 +1,7 @@
 package infrastructure
 
 import (
-	"github.com/mukezhz/test/pkg/framework"
+	"{{.ProjectModuleName}}/pkg/framework"
 	"net/http"
 
 	"github.com/getsentry/sentry-go"
