--- a/templates/wesionary/project/pkg/responses/response.tmpl
+++ b/templates/wesionary/project/pkg/responses/response.tmpl
@@ -1,7 +1,7 @@
 package responses
 
 import (
-	"github.com/mukezhz/test/pkg/framework"
+	"{{.ProjectModuleName}}/pkg/framework"
 
 	"github.com/gin-gonic/gin"
 )
