--- a/templates/wesionary/project/pkg/infrastructure/router.tmpl
+++ b/templates/wesionary/project/pkg/infrastructure/router.tmpl
@@ -19,7 +19,7 @@ type Router struct {
 func NewRouter(
 	env *framework.Env,
 	logger framework.Logger,
-) Router {
+) *Router {
 
 	if env.Environment != "local" && env.SentryDSN != "" {
 		if err := sentry.Init(sentry.ClientOptions{
@@ -58,7 +58,7 @@ func NewRouter(
 		c.JSON(http.StatusOK, gin.H{"data": "clean architecture 📺 API Up and Running"})
 	})
 
-	return Router{
+	return &Router{
 		httpRouter,
 	}
 }
