--- a/templates/wesionary/project/pkg/middlewares/module.tmpl
+++ b/templates/wesionary/project/pkg/middlewares/module.tmpl
@@ -6,6 +6,6 @@ import "go.uber.org/fx"
 var Module = fx.Module(
 	"middlewares",
 	fx.Options(
-		fx.Provide(NewRateLimitMiddleware),
+		fx.Provide(NewRateLimitMiddleware, NewMiddlewares),
 	),
 )
