--- a/templates/wesionary/module/route.tmpl
+++ b/templates/wesionary/module/route.tmpl
@@ -1,18 +1,23 @@
 package {{.PackageName}}
 
-import "{{.ProjectModuleName}}/pkg/framework"
+import (
+  "github.com/gin-gonic/gin"
+  "{{.ProjectModuleName}}/pkg/framework"
+)
 
 type {{.ModuleName}}Route struct {
     router *framework.Router
     controller *{{.ModuleName}}Controller
+    groupRouter *gin.RouterGroup
 }
 
 func New{{.ModuleName}}Route(router *framework.Router, controller *{{.ModuleName}}Controller) *{{.ModuleName}}Route {
 	route := {{.ModuleName}}Route{router: router, controller: controller}
+  route.groupRouter = router.Group("/{{.PackageName}}")
 	route.RegisterHelloRoutes()
 	return &route
 }
 
 func (r *{{.ModuleName}}Route) RegisterHelloRoutes() {
-	r.router.GET("/", r.controller.HandleRoot)
+	r.groupRouter.GET("/", r.controller.HandleRoot)
 }
