fix: information after module generation

--- a/templates/wesionary/module/route.tmpl
+++ b/templates/wesionary/module/route.tmpl
@@ -19,5 +19,5 @@ func New{{.ModuleName}}Route(router *infrastructure.Router, controller *{{.Modul
 }
 
 func (r *{{.ModuleName}}Route) RegisterHelloRoutes() {
-	r.groupRouter.GET("/", r.controller.HandleRoot)
+	r.groupRouter.GET("", r.controller.HandleRoot)
 }
