feat: add support to generate infrastructure and inject the provider to DI

--- a/templates/wesionary/project/pkg/infrastructure/module.tmpl
+++ b/templates/wesionary/project/pkg/infrastructure/module.tmpl
@@ -6,8 +6,6 @@ import "go.uber.org/fx"
 var Module = fx.Module(
 	"infrastructure",
 	fx.Options(
-		fx.Provide(
-			NewRouter,
-		),
+		fx.Provide(NewRouter),
 	),
 )
