--- a/templates/wesionary/project/pkg/framework/env.tmpl
+++ b/templates/wesionary/project/pkg/framework/env.tmpl
@@ -27,6 +27,10 @@ type Env struct {
 	TimeZone            string `mapstructure:"TIMEZONE"`
 	AdminEmail          string `mapstructure:"ADMIN_EMAIL"`
 	AdminPassword       string `mapstructure:"ADMIN_PASSWORD"`
+
+	S3TempFolder		string `mapstructure:"S3_TEMP_FOLDER"`
+	S3BucketName		string `mapstructure:"S3_BUCKET_NAME"`
+	S3AttachmentFolder	string `mapstructure:"S3_ATTACHMENT_FOLDER"`
 }
 
 var globalEnv = Env{
