feat: add command to add service

--- a/templates/wesionary/project/pkg/services/module.tmpl
+++ b/templates/wesionary/project/pkg/services/module.tmpl
@@ -7,7 +7,5 @@ import (
 // Module exports services present
 var Module = fx.Module(
 	"services",
-	fx.Options(
-		fx.Provide(),
-	),
+	fx.Options(),
 )
