fix: change hardcoded value to get value from variable

--- a/templates/wesionary/infrastructure/aws.tmpl
+++ b/templates/wesionary/infrastructure/aws.tmpl
@@ -2,7 +2,7 @@ package infrastructure
 
 import (
 	"context"
-	"yomiuri-chat-api/pkg/framework"
+	"{{.ProjectModuleName}}/pkg/framework"
 
 	"github.com/aws/aws-sdk-go-v2/feature/s3/manager"
 	"github.com/aws/aws-sdk-go-v2/service/s3"
