--- a/templates/wesionary/project/pkg/framework/env.tmpl
+++ b/templates/wesionary/project/pkg/framework/env.tmpl
@@ -31,6 +31,10 @@ type Env struct {
 	S3TempFolder		string `mapstructure:"S3_TEMP_FOLDER"`
 	S3BucketName		string `mapstructure:"S3_BUCKET_NAME"`
 	S3AttachmentFolder	string `mapstructure:"S3_ATTACHMENT_FOLDER"`
+
+	AWSRegion           string `mapstructure:"AWS_REGION"`
+	AWSAccessKey        string `mapstructure:"AWS_ACCESS_KEY_ID"`
+	AWSSecretAccessKey  string `mapstructure:"AWS_SECRET_KEY_ID"`
 }
 
 var globalEnv = Env{
