fix: remove hard code value

--- a/templates/wesionary/infrastructure/opensearch.tmpl
+++ b/templates/wesionary/infrastructure/opensearch.tmpl
@@ -3,7 +3,7 @@ package infrastructure
 import (
 	"crypto/tls"
 	"net/http"
-	"yomiuri-chat-api/pkg/framework"
+	"{{.ProjectModuleName}}/pkg/framework"
 
 	opensearch "github.com/opensearch-project/opensearch-go/v2"
 )
