feat: add opensearch env for opensearch

--- a/templates/wesionary/project/pkg/framework/env.tmpl
+++ b/templates/wesionary/project/pkg/framework/env.tmpl
@@ -35,6 +35,10 @@ type Env struct {
 	AWSRegion           string `mapstructure:"AWS_REGION"`
 	AWSAccessKey        string `mapstructure:"AWS_ACCESS_KEY_ID"`
 	AWSSecretAccessKey  string `mapstructure:"AWS_SECRET_KEY_ID"`
+
+	OpenSearchURL       string `mapstructure:"OPENSEARCH_API_URL"`
+	OpenSearchAdminUser string `mapstructure:"OPENSEARCH_ADMIN_USER"`
+	OpenSearchAdminPass string `mapstructure:"OPENSEARCH_ADMIN_PASS"`
 }
 
 var globalEnv = Env{
