--- a/templates/wesionary/project/domain/module.tmpl
+++ b/templates/wesionary/project/domain/module.tmpl
@@ -1,7 +1,7 @@
 package domain
 
 import (
-    "{{.ProjectModuleName}}/domain/features"
+    "{{.ProjectModuleName}}/domain/hello"
     "{{.ProjectModuleName}}/domain/middlewares"
 
     "go.uber.org/fx"
@@ -9,5 +9,5 @@ import (
 
 var Module = fx.Options(
 	middlewares.Module,
-	features.Module,
+	hello.Module,
 )
