--- a/templates/wesionary/module/repository.tmpl
+++ b/templates/wesionary/module/repository.tmpl
@@ -1,12 +1,12 @@
 package {{.PackageName}}
 
-type {{.ModuleName}}Repository struct {
+type Repository struct {
 }
 
-func New{{.ModuleName}}Repository() *{{.ModuleName}}Repository {
-	return &{{.ModuleName}}Repository{}
+func NewRepository() *Repository {
+	return &Repository{}
 }
 
-func (s *{{.ModuleName}}Repository) GetMessage() {{.ModuleName}}Model {
-	return {{.ModuleName}}Model{Message: "Hello World"}
+func (s *Repository) GetMessage() Model {
+	return Model{Message: "Hello World"}
 }
