feat: add seeding using cli
feat: move initialization to seperate file
feat: add geng run, geng seed and geng start command

feat: use project name for container name when project is being generated

--- a/templates/wesionary/project/seeds/command.tmpl
+++ b/templates/wesionary/project/seeds/command.tmpl
@@ -2,7 +2,9 @@ package seeds
 
 // Seed db seed
 type Seed interface {
-  Setup()
+	// name is used to identify the seed
+	Name() string
+	Setup()
 }
 
 // Seeds listing of seeds
@@ -10,11 +12,11 @@ type Seeds []Seed
 
 // Run run the seed data
 func (s Seeds) Setup() {
-  for _, seed := range s {
-    seed.Setup()
-  }
+	for _, seed := range s {
+		seed.Setup()
+	}
 }
 
 func NewSeeds() Seeds {
-  return Seeds{}
+	return Seeds{}
 }
