--- a/templates/wesionary/project/bootstrap/module.tmpl
+++ b/templates/wesionary/project/bootstrap/module.tmpl
@@ -1,17 +1,19 @@
 package bootstrap
 
 import (
-    "{{.ProjectModuleName}}/domain"
-    "{{.ProjectModuleName}}/pkg"
-    "{{.ProjectModuleName}}/seeds"
+	"{{.ProjectModuleName}}/domain"
+	"{{.ProjectModuleName}}/migrations"
+	"{{.ProjectModuleName}}/pkg"
+	"{{.ProjectModuleName}}/seeds"
 
-    "go.uber.org/fx"
+	"go.uber.org/fx"
 )
 
 var CommonModules = fx.Module("common",
-    fx.Options(
-        pkg.Module,
-        seeds.Module,
-        domain.Module,
-    ),
+	fx.Options(
+		pkg.Module,
+		seeds.Module,
+		migrations.Module,
+		domain.Module,
+	),
 )
