--- a/templates/wesionary/project/console/console.tmpl
+++ b/templates/wesionary/project/console/console.tmpl
@@ -14,6 +14,7 @@ var cmds = map[string]framework.Command{
 	"cmd:random": commands.NewRandomCommand(),
 	"app:serve":  commands.NewServeCommand(),
 	"seed:run":   commands.NewSeedCommand(),
+	"migrate":    commands.NewMigrateCommand(),
 }
 
 // GetSubCommands gives a list of sub commands
