--- a/templates/wesionary/project/seeds/module.tmpl
+++ b/templates/wesionary/project/seeds/module.tmpl
@@ -1,10 +1,27 @@
 package seeds
 
-import "go.uber.org/fx"
+import (
+	"{{.ProjectModuleName}}/pkg/framework"
 
-// Module exports seed module
-var Module = fx.Module("seeds",
-    fx.Options(
-        fx.Provide(NewSeeds),
-    ),
+	"go.uber.org/fx"
+)
+
+func AsSeeder(f any) any {
+	return fx.Annotate(
+		f,
+		fx.As(new(framework.Seed)),
+		fx.ResultTags(`group:"seeds"`),
+	)
+}
+
+var (
+	Module = fx.Module("seeds",
+		fx.Provide(
+			AsSeeder(NewHelloSeed),
+			fx.Annotate(
+				NewSeeder,
+				fx.ParamTags(`group:"seeds"`),
+			),
+		),
+	)
 )
