feat: place models similar to wesionary clean architecture
feat: add name of file for ease in finding name

--- a/templates/templates/wesionary/module/repository.tmpl
+++ b/templates/templates/wesionary/module/repository.tmpl
@@ -1,5 +1,9 @@
 package {{.PackageName}}
 
+import (
+	"{{.ProjectModuleName}}/domain/models"
+)
+
 type Repository struct {
 }
 
@@ -7,6 +11,6 @@ func NewRepository() *Repository {
 	return &Repository{}
 }
 
-func (s *Repository) GetMessage() Model {
-	return Model{Message: "Hello World"}
+func (s *Repository) GetMessage() models.{{.ModuleName}}Model {
+	return models.{{.ModuleName}}Model{Message: "Hello World"}
 }
