--- a/templates/templates/wesionary/module/route.tmpl
+++ b/templates/templates/wesionary/module/route.tmpl
@@ -1,22 +1,20 @@
 package {{.PackageName}}
 
 import (
-  "github.com/gin-gonic/gin"
   "{{.ProjectModuleName}}/pkg/infrastructure"
 )
 
 type Route struct {
     router *infrastructure.Router
     controller *Controller
-    groupRouter *gin.RouterGroup
 }
 
 func NewRoute(router *infrastructure.Router, controller *Controller) *Route {
 	route := Route{router: router, controller: controller}
-  route.groupRouter = router.Group("api/{{.PackageName}}")
 	return &route
 }
 
 func RegisterRoute(r *Route) {
-	r.groupRouter.GET("", r.controller.HandleRoot)
+  api := r.router.Group("/api")
+	r.groupRouter.GET("/{{.PackageName}}", r.controller.HandleRoot)
 }
